# rants

./: .gitignore  AGENTS.md  DEVELOPERS.md  Dockerfile  RANTS_Implementation_guide.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/: Recursive_Language_Models_2512.24601v1.txt
features/: error_handling.feature
features/steps/: error_handling_steps.py
gateway/: app.py  chat_shim.py  config.py  errors.py  orchestrator.py  responses.py  rlm_engine.py  security.py
gateway/models/: openai_client.py  types.py
gateway/state/: sqlite_store.py
gateway/tools/: audit.py  executors.py  patch.py  registry.py
plans/: tool_usage_stability.md
